Don't apply maximized window bounds workaround if bounds aren't changed

In HWNDMessageHandler::OnWindowPosChanging() was added code that
restores correct maximized window's bounds after attaching or detaching
additional display (see crrev.com/6bb7f8192). But this workaround also
applied if OnWindowPosChanging() was called with SWP_NOMOVE/SWP_NOSIZE
flags that leads to bugs such as crbug.com/659525 and crbug.com/655984.

This CL adds additional check for SWP_NOMOVE/SWP_NOSIZE flags before
applying workaround and fixes this bugs.

BUG=659525,655984

Review-Url: https://codereview.chromium.org/2454053004
Cr-Commit-Position: refs/heads/master@{#428368}

Former-commit-id: 6279588b7ebc740f85409107dd91b5c3ce628065